[metadata]
name = mypackage
version = 0.1.4
author = Sebastian Tabares Amaya
author_email = me@syta.co
description = A package for processing HTML files and web content
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/EPI3co/webpage.git
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires = file: requirements.txt

[options.entry_points]
console_scripts =
    webpage_download = webpage.main:main


